force-app/main/default/objects/vlocity_ps__TrailingDocumentPlaceholder__c/fields/vlocity_ps__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>