force-app/main/default/objects/vlocity_ps__TrailingDocumentPlaceholder__c/fields/vlocity_ps__LeadId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>