force-app/main/default/objects/vlocity_ps__TrailingDocumentPlaceholder__c/fields/vlocity_ps__ParentPlaceholderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParentPlaceholderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailing Document Category</label>
    <referenceTo>vlocity_ps__TrailingDocumentPlaceholder__c</referenceTo>
    <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
    <relationshipName>TrailingDocumentPlaceholders</relationshipName>
    <type>Lookup</type>
</CustomField>