force-app/main/default/objects/vlocity_ps__TrailingDocumentPlaceholder__c/fields/vlocity_ps__ProgramEnrollmentMemberId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramEnrollmentMemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Enrollment Member</label>
    <referenceTo>vlocity_ps__ProgramEnrollmentMember__c</referenceTo>
    <relationshipLabel>Program Enrollment Members</relationshipLabel>
    <relationshipName>ProgramEnrollmentMembers</relationshipName>
    <type>Lookup</type>
</CustomField>