force-app/main/default/objects/vlocity_ps__TrailingDocumentPlaceholder__c/fields/vlocity_ps__PublicProgramId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PublicProgramId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Public Program</label>
    <referenceTo>vlocity_ps__PublicProgram__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>