force-app/main/default/objects/vlocity_ps__TrailingDocumentPlaceholder__c/fields/vlocity_ps__ServicePlanId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServicePlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan</label>
    <referenceTo>vlocity_ps__BenefitCaseServicePlan__c</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>ServicePlans</relationshipName>
    <type>Lookup</type>
</CustomField>