force-app/main/default/objects/vlocity_ps__TrailingDocumentPlaceholder__c/fields/vlocity_ps__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disapproved</fullName>
            </value>
            <value>
                <fullName>Deemed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Alternate Format</fullName>
            </value>
            <value>
                <fullName>SA/LIS</fullName>
            </value>
            <value>
                <fullName>Populated Template</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
                <isActive>false</isActive>
                <label>Optional</label>
            </value>
            <value>
                <fullName>Required</fullName>
                <isActive>false</isActive>
                <label>Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>